2000-11-20  Ulrich Drepper  <drepper@redhat.com>

	* charmaps/BALTIC: Superceded by ISO-8859-13.

2000-11-15  Ulrich Drepper  <drepper@redhat.com>

	* locales/ko_KR: Changed LC_IDENTIFICATION territory field to
	Republic of Korea.  Streamlined and extend(include all Hangul
	syllables) hangul and hanja class definition in LC_CTYPE and
	hangul portion of LC_COLLATE.  Several changes in LC_TIME.  Added
	tel_dom_fmt to LC_TELEPHONE.
	Patch by Jungshik Shin <jshin@pantheon.yale.edu>.

2000-11-09  Ulrich Drepper  <drepper@redhat.com>

	* locales/ko_KR: Fix currency_symbol.
	Reported by Jungshik Shin <jshin@pantheon.yale.edu>.

2000-11-08  Bruno Haible  <haible@clisp.cons.org>

	* locales/translit_neutral: Tweak <U2014>, <U2212>, <U2219>.
	Reported by Markus Kuhn.

2000-11-08  Ulrich Drepper  <drepper@redhat.com>

	* charmaps/EUC-KR: Revert last change.  Backslash maps to backslash.
	* locales/ko_KR: Revert change.  Use full with won sign.
	Reported by Jungshik Shin <jshin@pantheon.yale.edu>.

2000-11-07  Ulrich Drepper  <drepper@redhat.com>

	* locales/mk_MK: Update.
	Patch by Damjan Georgievski <gdamjan@freemail.org.mk>.

2000-11-06  Ulrich Drepper  <drepper@redhat.com>

	* charmaps/BIG5: Add mapping for <U20AC> back.
	Patch by Tung-Han Hsieh <thhsieh@twcpro.phys.ntu.edu.tw>.

2000-11-03  Bruno Haible  <haible@clisp.cons.org>

	* locales/translit_neutral: Add more entries.  Mostly from Markus Kuhn.
	* locales/translit_compat: Add a few ligatures.
	* locales/translit_combining: Add a few plain ASCII alternatives.
	* locales/translit_fraction: Likewise.  Surround with spaces.

2000-10-29  Bruno Haible  <haible@clisp.cons.org>

	* locales/translit_hangul: New file.
	* locales/ko_KR (LC_CTYPE): Include it.

2000-10-29  Bruno Haible  <haible@clisp.cons.org>

	* locales/translit_cjk_variants: New file.
	* locales/ja_JP (LC_CTYPE): Include it.

2000-10-29  Bruno Haible  <haible@clisp.cons.org>

	* locales/da_DK (LC_CTYPE): Include translit_combining, add A-ring