@@ -116,8 +116,8 @@ xstrcoll (ptr1, ptr2)
      const void *ptr1;
      const void *ptr2;
 {
-  struct lines *l1 = (struct lines *) ptr1;
-  struct lines *l2 = (struct lines *) ptr2;
+  const struct lines *l1 = (const struct lines *) ptr1;
+  const struct lines *l2 = (const struct lines *) ptr2;
 
   return strcoll (l1->key, l2->key);
 }
